--- a/app/components/dashboard/dashboard.html
+++ b/app/components/dashboard/dashboard.html
@@ -1,5 +1,5 @@
 <div>
-    <div id="dash-tour" tour-step order="0" title="The {{global.community.profile.name.split(',')[0] }} Startup Community" content="Your community includes people and companies, organized by industry and skillset." placement="top">
+    <div id="dash-tour" tour-step order="0" title="The {{global.location.profile.name.split(',')[0] }} Startup Community" content="Your community includes people and companies, organized by industry and skillset." placement="top">
         <div class="row">
             <div class="col-xs-12 col-sm-4">
                 <div class="hpanel hblue" >
