--- a/app/less/various.less
+++ b/app/less/various.less
@@ -829,7 +829,7 @@ footer, .push {
   //border-top: 1px solid @border-color;
 }
 
-#side-menu li.active a, #side-menu li:hover {
+#side-menu li.active a, #side-menu li.active p, #side-menu li:hover {
   color: #444;
   font-weight: bold;
 }
