adjusted width of input box

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1075,7 +1075,8 @@ a:hover, a:focus {
 .navbar-form-custom {
   display: inline-block;
   height: 52px;
-  max-width: 350px;
+  width: 75%;
+  max-width: 75%;
   padding: 7px 0 0 0;
 }
 
