added border to input box

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1074,10 +1074,13 @@ a:hover, a:focus {
 
 .navbar-form-custom {
   display: inline-block;
-  height: 52px;
-  width: 75%;
-  max-width: 75%;
-  padding: 7px 0 0 0;
+  height: 30px;
+  max-width: 350px;
+  padding-left: 5px;
+  padding-right: 10px;
+  margin-top: 15px;
+  border: 1px solid #eee;
+  border-radius: 3px;
 }
 
 .navbar-form-custom .form-control {
@@ -1085,7 +1088,7 @@ a:hover, a:focus {
   border: medium none;
   font-size: 20px;
   font-weight: 200;
-  height: 52px;
+  height: 30px;
   margin: 0;
   z-index: 1060;
   padding: 0;
