--- a/app/components/companies/company.dashboard.network.html
+++ b/app/components/companies/company.dashboard.network.html
@@ -1,12 +1,5 @@
 <div class="row">
-    <div class="col-xs-12 col-md-6">
-        <div class="hpanel" ng-class="type.color" ng-repeat="type in ::profile.team_panels" ng-if="!($index % 2) && (type.name !== 'leader' || global.profile.resource)" ng-include="'components/companies/company.dashboard.network.panel.html'">
-        </div>
-    </div>
-    <div class="col-xs-12 col-md-6">
-        <div class="hpanel" ng-class="type.color" ng-repeat="type in ::profile.team_panels" ng-if="$index % 2" ng-include="'components/companies/company.dashboard.network.panel.html'">
-        </div>
-    </div>
+    <div ng-include="'components/users/user.list.html'" ng-controller="UserController as users"></div>
 </div>
 <div class="row" style="text-align: center;">
     <button class="btn btn-xs btn-default" ui-sref="company.edit({location_path: '', community_path: global.profile.key})">Add yourself to this {{global.profile.resource ? 'resource' : 'company'}}</button>
