--- a/app/components/companies/company.dashboard.profile.html
+++ b/app/components/companies/company.dashboard.profile.html
@@ -31,7 +31,7 @@
 
 <div ng-show="global.profile.profile.summary" class="panel-footer" style="margin-top:10px;">
     <h3>Summary</h3>
-    <p style="white-space:pre-wrap;" ng-bind-html="::global.profile.profile.summary | linky:'_blank'"></p>
+    <p style="white-space:pre-wrap;" ng-bind-html="::global.profile.profile.summary"></p>
     <hr>
     <h3 ng-show="global.profile.profile.industries">Markets</h3>
     <li ng-repeat="industry in global.profile.profile.industries" class="label btn-default skills"><a href="#" ui-sref="search.dashboard({location_path: global.location.key})">{{::industry}}</a></li>
