--- a/app/less/various.less
+++ b/app/less/various.less
@@ -472,7 +472,7 @@ input:-moz-placeholder {
 }
 
 .dash-row > span {
-  float: left;
+  //float: none;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
