--- a/app/components/companies/company.list.item.html
+++ b/app/components/companies/company.list.item.html
@@ -1,34 +1,34 @@
 <div class="col-md-12 dash-table">
     <div>
-        <a ui-sref="company.dashboard({ location_path: item.path.key, community_path: '', tail_path: '', noreload: true, profile: item.value, query: null })" ng-click="global.loaders[item.value.profile.name] = true" title="View {{::item.value.profile.name | words:0}}'s Profile"><img
-                ng-src="{{item.value.profile.avatar || '/public/images/browser_icon.jpg'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image pull-left" onerror="this.src='images/browser_icon.jpg'"/></a>
+        <a ui-sref="company.dashboard({ location_path: item.slug, community_path: '', tail_path: '', noreload: true, profile: item, query: null })" ng-click="global.loaders[item.name] = true" title="View {{::item.name | words:0}}'s Profile"><img
+                ng-src="{{item.avatar || '/public/images/browser_icon.jpg'}}" alt="{{::item.name}}" class="user-img widget-image pull-left" onerror="this.src='images/browser_icon.jpg'"/></a>
     </div>
     <div class="user-row list-hr">
-        <a ui-sref="company.dashboard({ location_path: item.path.key, community_path: '', tail_path: '', noreload: true, profile: item.value, query: null })" title="View {{::item.value.profile.name | words:0}}'s Profile" ng-click="global.loaders[item.value.profile.name] = true" class="dash-row-div"><strong>{{::item.value.profile.name}} </strong></a>
-        <div class="dash-row-summary" ng-show="(item.value.profile.summary).length > 0" style="margin-left: -5px;">
+        <a ui-sref="company.dashboard({ location_path: item.slug, community_path: '', tail_path: '', noreload: true, profile: item, query: null })" title="View {{::item.name | words:0}}'s Profile" ng-click="global.loaders[item.name] = true" class="dash-row-div"><strong>{{::item.name}} </strong></a>
+        <div class="dash-row-summary" ng-show="(item.summary).length > 0" style="margin-left: -5px;">
             <a title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;&nbsp;<i style="font-size: 8px;" class="fa fa-chevron-down"></i></a>
         </div>
-        <span loading-bars ng-if="global.loaders[item.value.profile.name]"></span>
-        <span ng-if="!item.value.resource && item.value.profile.parents[0]">
+        <span loading-bars ng-if="global.loaders[item.name]"></span>
+        <span ng-if="!item.resource && item.parents[0]">
             <li class="role-right">
-                <button style="cursor: default;" class="btn btn-xs btn-outline btn-default">{{item.value.profile.parents[0][0].toUpperCase() + item.value.profile.parents[0].slice(1);}}</button>
+                <button style="cursor: default;" class="btn btn-xs btn-outline btn-default">{{item.parents[0][0].toUpperCase() + item.parents[0].slice(1);}}</button>
             </li>
         </span>
-        <span ng-if="item.value.resource && item.value.resource_types[0]">
+        <span ng-if="item.resource && item.resource_types[0]">
             <li class="role-right">
-                <button style="cursor: default;" class="btn btn-xs btn-outline btn-default">{{item.value.resource_types[0][0].toUpperCase() + item.value.resource_types[0].slice(1);}}</button>
+                <button style="cursor: default;" class="btn btn-xs btn-outline btn-default">{{item.resource_types[0][0].toUpperCase() + item.resource_types[0].slice(1);}}</button>
             </li>
         </span>
         <br>
         <div class="dash-row">
-            <span class="text-muted" ng-bind-html="::item.value.profile.headline | highlight:companies.lastQuery" title="{{::item.value.profile.headline}}"></span>
+            <span class="text-muted" ng-bind-html="::item.headline | highlight:companies.lastQuery" title="{{::item.headline}}"></span>
         </div>
-        <div ng-show="(showSummary || $state.includes('search.*')) && item.value.profile.summary">
+        <div ng-show="(showSummary || $state.includes('search.*')) && item.summary">
             <div style="padding-bottom: 10px;">
                 <hr>
-                <span class="text-muted" style="white-space:pre-wrap;" ng-bind-html="::item.value.profile.summary | linky:'_blank' | highlight:companies.lastQuery | safe_html"></span>
-                <div id="skills" ng-if="(showSummary || companies.lastQuery) && item.value.profile.summary" class="skills-top">
-                    <li ng-if="item.value.profile.industries" ng-repeat="market in item.value.profile.industries" class="label btn-default skills">
+                <span class="text-muted" style="white-space:pre-wrap;" ng-bind-html="::item.summary | linky:'_blank' | highlight:companies.lastQuery | safe_html"></span>
+                <div id="skills" ng-if="(showSummary || companies.lastQuery) && item.summary" class="skills-top">
+                    <li ng-if="item.industries" ng-repeat="market in item.industries" class="label btn-default skills">
                         <a><span ng-click="nav.search(market)" ng-bind-html="::market | highlight:companies.lastQuery"></span></a>
                     </li>
                 </div>
