--- a/app/components/nav/nav.edit_cluster.html
+++ b/app/components/nav/nav.edit_cluster.html
@@ -24,7 +24,7 @@
                 <br>
                 <div class="panel-heading" style="font-size: 20px;">3. Customize the url path</div>
                 <input type="text" class="form-control input-lg" placeholder="{{ edit.communityForm.name | encode }}" ng-model="edit.communityForm.url" style="margin-bottom: 5px;" ng-disabled="edit.update">
-                <em>Your url will be: https://startupcommunity.org/{{global.location.key}}/<strong><span style="text-transform: lowercase;">{{(edit.communityForm.url || edit.communityForm.name) | encode }}</span></strong></em>
+                <em>Your url will be: https://startupcommunity.org/{{global.location.slug}}/<strong><span style="text-transform: lowercase;">{{(edit.communityForm.url || edit.communityForm.name) | encode }}</span></strong></em>
                 <br><br>
                 <div class="panel-heading" style="font-size: 20px;">4. And a short description</div>
                 <input type="text" class="form-control input-lg" placeholder="Local hardware and software product companies" ng-model="edit.communityForm.headline">
