--- a/app/components/users/user.dashboard.ask.questions.replies.html
+++ b/app/components/users/user.dashboard.ask.questions.replies.html
@@ -1,11 +1,11 @@
 <div class="media social-profile clearfix">
     <a class="pull-left">
-        <img ng-src="{{reply.from.avatar || '/public/images/blank_avatar.png'}}" alt="{{reply.from.name}}" ui-sref="user.dashboard({location_path: question.from.key, profile: {}})">
+        <img ng-src="{{reply.from.avatar || '/public/images/blank_avatar.png'}}" alt="{{reply.from.name}}" ui-sref="user.dashboard({location_path: question.from.slug, profile: {}})">
     </a>
 
     <div class="media-body">
-        <small><a class="pull-right" style="color: #999" ui-sref="user.dashboard({location_path: question.from.key, profile: {}})">{{reply.from.headline}}</a></small>
-        <a style="font-weight:bold;" ui-sref="user.dashboard({location_path: reply.from.key, profile: {}})">{{reply.from.name}}</a>
+        <small><a class="pull-right" style="color: #999" ui-sref="user.dashboard({location_path: question.from.slug, profile: {}})">{{reply.from.headline}}</a></small>
+        <a style="font-weight:bold;" ui-sref="user.dashboard({location_path: reply.from.slug, profile: {}})">{{reply.from.name}}</a>
         <small class="text-muted"> on {{ reply.published | date : 'MMM d' }}</small>
 
         <div class="social-content">
