--- a/app/components/users/user.dashboard.companies.panel.html
+++ b/app/components/users/user.dashboard.companies.panel.html
@@ -19,5 +19,5 @@
             <div ng-if="$last" style="margin-bottom:-11px;"></div>
         </div>
     </div>
-    <div ng-if="!profile.user.companies[type.name]" style="padding-top: 10px;">None yet..&nbsp;<button class="btn btn-xs btn-default btn-outline" ng-if="profile.user.key == global.user.key" style="font-size:12px;" ng-href="{{global.location.key + '/add-company'}}">add one?</button></div>
+    <div ng-if="!profile.user.companies[type.name]" style="padding-top: 10px;">None yet..&nbsp;<button class="btn btn-xs btn-default btn-outline" ng-if="profile.user.slug == global.user.slug" style="font-size:12px;" ng-href="{{global.location.slug + '/add-company'}}">add one?</button></div>
 </div>
