--- a/app/components/users/user.list.html
+++ b/app/components/users/user.list.html
@@ -59,7 +59,7 @@
                             <a><i class="fa fa-fw fa-globe themed-color-dark icon-push"></i> All</a>
                         </li>
                         <li ng-if="global.community.type == 'cluster'" class="active">
-                            <a><i class="fa fa-fw fa-globe themed-color-dark icon-push"></i> {{global.community.profile.name}}</a>
+                            <a><i class="fa fa-fw fa-globe themed-color-dark icon-push"></i> {{global.community.name}}</a>
                         </li>
                         <hr style="margin: 10px 0 10px 0;">
                         <li ng-if="global.community.type !== 'cluster'" ng-repeat="cluster in global.top.parents" ng-class="{'active':users.selectedClusters.indexOf(cluster.label) >= 0}" ng-click="users.loadingCluster=true;  users.allClusters=false; users.filterClusters(cluster.label);">
@@ -81,7 +81,7 @@
                             <a><i class="fa fa-fw fa-globe themed-color-dark icon-push"></i> All</a>
                         </li>
                         <hr style="margin: 10px 0 10px 0;">
-                        <li ng-repeat="resource in nav.resources" ng-class="{'active':users.selectedResources.indexOf(resource.key) >= 0}" ng-click="users.allResources=false; users.filterResources(resource.key);">
+                        <li ng-repeat="resource in nav.resources" ng-class="{'active':users.selectedResources.indexOf(resource.slug) >= 0}" ng-click="users.allResources=false; users.filterResources(resource.slug);">
                             <a>{{resource.profile.name}}</a>
                         </li>
                     </ul>
